Modification du projet